--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,12 +3,13 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "baseUrl": "./", // Убедитесь, что baseUrl указан как ./
+    "paths": {
+      "@app/*": ["app/*"],
+      "@environments/*": ["environments/*"]
+    }
   },
-  "files": [
-    "src/main.ts"
-  ],
-  "include": [
-    "src/**/*.d.ts"
-  ]
+  "files": ["src/main.ts"],
+  "include": ["src/**/*.d.ts"]
 }
